# west

./: .gitignore  Cargo.toml  LICENSE  README.md
_OLD/backend/bytecode/: Cargo.toml
_OLD/backend/vm/: Cargo.toml
_OLD/typechecker/src/: error.rs  (+1 more)
_OLD/west/: Cargo.toml
ast/: Cargo.toml
ast/src/: lib.rs
backend/bytecode/: Cargo.toml
backend/compiler/: Cargo.toml
backend/vm/: Cargo.toml
compiler/: Cargo.toml
compiler/src/: lib.rs
fout/: Cargo.toml
fout/src/: lib.rs  source.rs
interpreter/: Cargo.toml
interpreter/src/: lib.rs
lexer/: Cargo.toml
lexer/src/: cursor.rs  error.rs  lib.rs  source.rs  token.rs
lexer/tests/: test.rs
parser/: Cargo.toml
parser/src/: block.rs  error.rs  expression.rs  file.rs  ident.rs  item.rs  lib.rs  literal.rs  module.rs  parser.rs  session.rs  statement.rs  ty.rs
parser/tests/: test.rs
src/: ast.rs  lib.rs  main.rs  source.rs
src/bytecode/: mod.rs  module.rs  opcode.rs  reg.rs  value.rs
src/compiler/: mod.rs
src/lexer/: cursor.rs  error.rs  mod.rs  token.rs
src/parser/: block.rs  error.rs  expr.rs  expression.rs  ident.rs  item.rs  literal.rs  mod.rs  module.rs  statement.rs
src/typechecker/: error.rs  mod.rs
src/vm/: vm.rs
tests/: expressions.rs  items.rs  lexer.rs  mod.rs  variables.rs
tests/common/: mod.rs
tests/e2e/: expressions.rs  items.rs  mod.rs  statements.rs  variables.rs
typechecker/: Cargo.toml
typechecker/src/: error.rs  lib.rs
vm/: Cargo.toml
vm/src/: chunk.rs  lib.rs  opcode.rs  vm.rs
west/: Cargo.toml
west/src/: main.rs
west/tests/: expressions.rs  items.rs  statements.rs  variables.rs
west/tests/common/: mod.rs
west_error/: Cargo.toml
west_error/src/: lib.rs  source.rs
westc/: Cargo.toml
westc/src/: lib.rs  main.rs
(+12 files in other folders)
