[workspace]
members = [
    "ast",
    "west_error",
    "lexer",
    "parser",
    "typechecker",
    "west",
    "backend/compiler",
    "backend/vm",
    "backend/bytecode",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
west_error = { path = "west_error" }
typechecker = { path = "typechecker" }
ast = { path = "ast" }
parser = { path = "parser" }
lexer = { path = "lexer" }

compiler = { path = "backend/compiler" }
vm = { path = "backend/vm" }
bytecode = { path = "backend/bytecode" }

thiserror = { version = "2" }
miette = { version = "7.4.0", features = ["fancy"] }
