[package]
name = "west"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }

# Error handling.
thiserror = { version = "2" }
ariadne = "0.5.0"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
test-log = "0.2.17"
