[package]
name = "west"
version.workspace = true
edition.workspace = true

[dependencies]
west_error.workspace = true
typechecker.workspace = true
parser.workspace = true
compiler.workspace = true

clap = { version = "4.5.26", features = ["derive"] }
inkwell.workspace = true

miette.workspace = true
